AmicarDP/src/objects/Desarrollo__c.object
<CustomObject>
    <fields>
        <fullName>Fecha_vencimiento__c</fullName>
        <label>Fecha vencimiento</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modificado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Numero_de_pago__c</fullName>
        <label>Número de pago</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pago__c</fullName>
        <label>Pago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Simulacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Simulación</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Desarrollo</relationshipLabel>
        <relationshipName>Desarrollos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solicitud__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Solicitud</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Desarrollo</relationshipLabel>
        <relationshipName>Desarrollo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Desarrollo</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Id Desarrollo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desarrollos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Formalizacion_ok_no_puede_modificar</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Simulacion__r.Opportunity.Formalizacion_OK__c,  OR(ISCHANGED(Numero_de_pago__c),ISCHANGED( Pago__c ),ISCHANGED( Fecha_vencimiento__c )))</errorConditionFormula>
        <errorMessage>No puede modificar en esta etapa de la solicitud</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoModificaSimulacionSincronizada</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    Simulacion__r.IsSyncing,
    NOT(ISCHANGED(Solicitud__c))
)</errorConditionFormula>
        <errorMessage>No se puede modificar un desarrollo cuando la simulación se ha sincronizado.</errorMessage>
    </validationRules>
</CustomObject>